syntax = "proto3";

package lottery.v1;


import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "lottery.v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  host: "yyuck.com";
  schemes: HTTPS;
};

service LotteryService {
  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/lottery.v1.LotteryService/lotterys"
    };
  }
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/lottery.v1.LotteryService/lotterys/{id}"
    };
  }
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/lottery.v1.LotteryService/lotterys",
      body: "*"
    };
  }
  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      patch: "/lottery.v1.LotteryService/lotterys/{id}",
      body: "*"
    };
  }
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/lottery.v1.LotteryService/lotterys/{id}",
    };
  }
}

// 抽签类型
enum Type {
  // 个数
  NUMBER = 0;
  // 几率
  PERCENT = 1;
}

// Lottery item
message Item {
  int32 id = 1; // id
  string name = 2; // lottery title
  int32 value = 3; // lottery summary
  int32 lottery_id = 4; // id
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
message NewItem {
  string name = 1; // lottery title
  int32 value = 2; // lottery summary
}
// Lottery item
message Remark {
  int32 id = 1; // id
  string name = 2; // lottery title
  bool require = 3; // lottery summary
  int32 lottery_id = 4; // id
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
message NewRemark {
  string name = 1; // lottery title
  bool require = 2; // lottery summary
}

// Lottery item
message LotteryInfo {
  int32 id = 1; // id
  string title = 2; // lottery title
  Type type = 3; // lottery image
  bool remark = 4; // lottery summary
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
// Lottery item
message Lottery {
  LotteryInfo lottery = 1;
  repeated Item items = 2;
  repeated Remark remarks = 3;
}
// New Blog item
message NewLotteryInfo {
  string title = 1; // lottery title
  Type type = 2; // lottery image
  bool remark = 3; // lottery summary
}
message NewLottery {
  NewLotteryInfo lottery = 1; // lottery title
  repeated NewItem items = 2; // lottery image
  repeated NewRemark remarks = 3; // lottery summary
}

message ListRequest {}
message ListResponse {
  repeated Lottery lotterys = 1;
}

message GetRequest {
  int32 id = 1;
}
message GetResponse {
  Lottery lottery = 1;
}

message CreateRequest {
  NewLottery lottery = 1;
}
message CreateResponse {
  Lottery lottery = 1;
}

message UpdateRequest {
  int32 id = 1;
  NewLottery lottery = 2;
}
message UpdateResponse {
  Lottery lottery = 1;
}

message DeleteRequest {
  int32 id = 1;
}
message DeleteResponse {
}
